@@ -57,6 +57,6 @@ public class OnOffSensor extends Sensor {
     }
 
     public void setMeasuredValue(boolean value) {
-	props.put(PROP_MEASURED_VALUE, new Boolean(value));
+	props.put(PROP_MEASURED_VALUE, Boolean.valueOf(value));
     }
 }
